--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,8 +7,7 @@
 </head>
 
 <body>
-    <h1>Hello World</h1>
-    <div id="app">
+    <div id="root">
     </div>
 <script type="text/javascript" src="bundle.js"></script></body>
 
